# YourStack

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  railway.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/agent/: .gitignore  Cargo.toml  README.md  agent.toml.example
apps/agent/scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
apps/agent/src/: api.rs  caddy.rs  config.rs  daemon.rs  docker.rs  executor.rs  main.rs  protocol.rs  resources.rs  service_windows.rs  signing.rs  telemetry.rs  util.rs
apps/agent/systemd/: noderail-agent.service  yourstack-agent.service
apps/api/: Dockerfile  package.json  railway.toml  tsup.config.ts  vitest.config.ts
apps/api/src/: context.ts  fastify.d.ts  index.ts  logger.ts  server.ts
apps/cli/: README.md  package.json  tsup.config.ts
apps/cli/src/: index.ts
apps/mcp/: README.md  package.json  tsconfig.json  tsup.config.ts
apps/mcp/src/: client.ts  index.ts  server.ts
apps/web/: .env.example  .eslintrc.json  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/public/: install.sh
apps/worker/: Dockerfile  package.json  railway.toml  tsup.config.ts
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  RAILWAY.md  SECURITY.md
infra/: .env.example  docker-compose.yml
infra/caddy/: Caddyfile
infra/docker/: agent.Dockerfile  web.Dockerfile
infra/railway/: web.railway.toml
scripts/: railway-migrate.sh
(+225 files in other folders)
