[package]
name = "yourstack-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "YourStack node agent: registers a bring-your-own server with the control plane, reports telemetry, and executes signed, typed deployment commands via Docker."
license = "MIT"
publish = false

[[bin]]
name = "yourstack-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
sysinfo = "0.33"
bollard = "0.18"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dirs = "5"

# Windows-only: run the agent as a native Windows Service (SCM integration).
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
